--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,6 @@ services:
       - key: GEMINI_API_KEY
         sync: false
       - key: GEMINI_MODEL
-        value: gemini-1.5-pro
+        value: gemini-1.5-flash
       - key: NODE_ENV
         value: production
